Bug #31874: Failure for NDB update/delete with combined range and equality constraints

In update/delete with read_multi_range, when mixing pk lookups and range
scans, sometimes update/delete did not correctly distinguish whether
the current row was from pk lookup or from scan. This caused query
failure (or potentially memory corruption and crash).

Fix by setting proper flags in the read_multi_range_next() method.